fixed views on mobile devices. fixed links for social media.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Aaron Yan - data scientist.</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="The portfolio of Aaron Yan. A data scientist based in Austin, TX.">
 		<meta name="keywords" content="aaron, yan, aaron yan, aaronyan, data scientist, operations research analyst, actionable insight">
 	    <link rel="icon" href="images/logos/favicon.ico">
@@ -27,9 +28,9 @@
 					<div>
 						<nav>
 							<ul>
-								<li><a class="active" href="index.html">About</a></li>
-								<li><a href="index.html">Work</a></li>
-								<li><a href="index.html">Contact</a></li>
+								<li><a href="">About</a></li>
+								<li><a href="">Work</a></li>
+								<li><a href="">Contact</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -133,14 +134,14 @@
 					<h2>What I Solve.</h2>
 				</div>
 				<div class="row">
-					<img src="images/objects/rectangle.png">
+					<img src="images/objects/whatisolve-statistic.png">
 				</div>
 				<div class="row">
 					<h3>Learning Problems</h3>
 					<p>I use statistics and machine learning to demystify trends and models from the data. [Python, R]</p>
 				</div>
 				<div class="row">
-					<img src="images/objects/rectangle.png">
+					<img src="images/objects/whatisolve-optimization.png">
 				</div>
 				<div id="whatisolve-last" class="row">
 					<h3>Optimization Problems</h3>
@@ -155,10 +156,10 @@
 				</div>
 				<div class="row">
 					<div class="six columns">
-						<a class="button button-primary first-b" href="#">About me</a>
+						<a class="button button-primary first-b" href="">About me</a>
 					</div>
 					<div class="six columns">
-						<a class="button button-primary second-b" href="#">View work</a>
+						<a class="button button-primary second-b" href="">View work</a>
 					</div>
 				</div>
 				<div id="endnote" class="row">
@@ -174,7 +175,7 @@
 				<div class="row">
 					<div class="twelve columns">
 						<ul class="icons">
-							<li><a href="www.linkedin.com/in/aaronmyan" class="icon circle fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/aaronmyan" class="icon circle fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/aaronyan" class="icon circle fa fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://twitter.com/aaronyan" class="icon circle fa fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/aaronmyan" class="icon circle fa fa-facebook"><span class="label">Facebook</span></a></li>
