--- a/index.html
+++ b/index.html
@@ -17,13 +17,37 @@
     	<link rel="stylesheet" href="css/skeleton.css">
 		<link rel="stylesheet" href="css/style.css" >
 		<link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
+		<!-- End Google Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-60207139-1', 'auto');
+		  ga('send', 'pageview');
+		</script>
+		<!-- End Google Analytics -->
 	</head>
 	<body>
+		<!-- Google Tag Manager -->
+		<noscript>
+			<iframe src="//www.googletagmanager.com/ns.html?id=GTM-MFMM4B"
+			height="0" width="0" style="display:none;visibility:hidden"></iframe>
+		</noscript>
+		<script>
+			(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+			'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+			})(window,document,'script','dataLayer','GTM-MFMM4B');
+		</script>
+		<!-- End Google Tag Manager -->
 		<header id="header">
 			<div class="container">
 				<div class="row">
 					<div class="two columns">
-						<h1><a href="index.html"><img src="images/logos/logo.png" alt="Aaron Yan - data scientist" title="Aaron Yan - data scientist"></a></h1>
+						<h1><a href="index.html"><img src="images/logos/logo2.png" alt="Aaron Yan - data scientist" title="Aaron Yan - data scientist"></a></h1>
 					</div>
 					<div>
 						<nav>
@@ -180,6 +204,11 @@
 							<li><a href="https://twitter.com/aaronyan" class="icon circle fa fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/aaronmyan" class="icon circle fa fa-facebook"><span class="label">Facebook</span></a></li>
 						</ul>
+					</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns">
+						<p class ="footertag">Designed, illustrated, and <a href="https://github.com/aaronyan/website">coded</a>.</p>
 					</div>
 				</div>
 				<div class="row">
