--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="The portfolio of Aaron Yan. A data scientist based in Austin, TX.">
 		<meta name="keywords" content="aaron, yan, aaron yan, aaronyan, data scientist, operations research analyst, actionable insight">
+		<meta http-equiv="pragma" content="no-cache" />
 	    <link rel="icon" href="images/logos/favicon.ico">
 	    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/logos/apple-touch-icon-152x152.png">
 	    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/logos/apple-touch-icon-144x144.png">
@@ -47,7 +48,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="two columns">
-						<h1><a href="index.html"><img src="images/logos/logo2.png" alt="Aaron Yan - data scientist" title="Aaron Yan - data scientist"></a></h1>
+						<h1><a href="index.html"><img src="images/logos/logo.png" alt="Aaron Yan - data scientist" title="Aaron Yan - data scientist"></a></h1>
 					</div>
 					<div>
 						<nav>
