--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<div>
 						<nav>
 							<ul>
-								<li><a href="">About</a></li>
+								<li><a href=".\about.html">About</a></li>
 								<li><a href="">Work</a></li>
 								<li><a href="">Contact</a></li>
 							</ul>
