added new datacenters for about page.

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 		</header>
-		<section id="banner" >
+		<section id="banner">
 			<div class="container">
 				<div class="row">
 					<div class="cloud left-cloud transition">
@@ -72,7 +72,7 @@
 						<img src="images/objects/cloudframe.png" alt="cloud that frames the banner">
 					</div>
 					<div class="twelve columns">
-						<div id="tagname">
+						<div id="tagnameabout">
 							<h1>About Me</h1>
 							<p>My background, ambitions, and skills.</p>
 						</div>
@@ -80,7 +80,22 @@
 				</div>
 			</div>
 		</section>
-		<section id="bannergradient"></section>
+		<section id="bannerimgabout">
+			<div class="container">
+				<div class="row">
+					<div class="six columns">
+						<div id="datacenterfreeleft">
+							<img src="images/objects/dataCenter-left.png" alt="Free floating datacenter, left side." title="Cloud datacenter freefloating.">
+						</div>
+					</div>
+					<div class="six columns">
+						<div id="datacenterfreeright">
+							<img src="images/objects/dataCenter-right.png" alt="Free floating datacenter, right side." title="Cloud datacenter freefloating.">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<footer id="footer">
 			<div class="container">
 				<div class="row">
