added intro text with formatting.

--- a/about.html
+++ b/about.html
@@ -96,6 +96,17 @@
 				</div>
 			</div>
 		</section>
+		<section id="aboutintro">
+			<div class="container">
+				<div class="row">
+					<div class="twelve columns">
+						<h3>Hi and welcome.</h3>
+						<p>I am a data scientist based in Austin, TX. I love learning how systems work and sharing them with others. Data science and today's massive amount of data has allowed me to peek into many unfamiliar worlds and share what I’ve learned. I get so excited when the data challenges the way I think, code, and visualize while trying to uncover its mysteries.</p>
+						<p>I am always looking for new ways to challenge myself. My latest goal was to learn HTML5 and CSS3 to build this website from scratch. After drenching my screen with lines of code, I like to partake in swimming, volleyball, ultimate frisbee, lifting, and hiking.</p>
+					</div>
+				</div>
+			</div>
+		</section>
 		<footer id="footer">
 			<div class="container">
 				<div class="row">
