smoothed out the window size transition for free-floating data centers on about page.

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 							<img src="images/objects/dataCenter-left.png" alt="Free floating datacenter, left side." title="Cloud datacenter freefloating.">
 						</div>
 					</div>
-					<div class="six columns">
+					<div class="six columns datacenterfreeright">
 						<div id="datacenterfreeright">
 							<img src="images/objects/dataCenter-right.png" alt="Free floating datacenter, right side." title="Cloud datacenter freefloating.">
 						</div>
