increased smooth window size transitions for 'what i do' section on frontpage.

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 					</div>
 				</div>
 				<div class="row whatrow">
-					<div class="four columns">
+					<div class="six columns">
 						<div class="odd-img">
 							<img src="images/objects/crunchNumbers.png">
 						</div>
 					</div>
-					<div class="eight columns">
+					<div class="six columns">
 						<div class="odd-text">
 							<h3>Crunch Numbers.</h3>
 							<p>I focus on the predictive modeling, machine learning, and optimization to solve the problems you need to understand at a more intimate level. [Python, Excel, R]</p>
