framework for javascript chart in 'about me' skills.

--- a/about.html
+++ b/about.html
@@ -18,6 +18,8 @@
     	<link rel="stylesheet" href="css/skeleton.css">
 		<link rel="stylesheet" href="css/style.css" >
 		<link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
+		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+		<script src="js/skills_leftchart.js"></script>
 		<!-- End Google Analytics -->
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -103,6 +105,15 @@
 						<h3>Hi and welcome.</h3>
 						<p>I am a data scientist based in Austin, TX. I love learning how systems work and sharing them with others. Data science and today's massive amount of data has allowed me to peek into many unfamiliar worlds and share what I’ve learned. I get so excited when the data challenges the way I think, code, and visualize while trying to uncover its mysteries.</p>
 						<p>I am always looking for new ways to challenge myself. My latest goal was to learn HTML and CSS to build this website from scratch. I also enjoy physical challenges such as swimming, volleyball, ultimate frisbee, lifting, and hiking.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="aboutskills">
+			<div class="container">
+				<div class="row">
+					<div class="twelve columns">
+						
 					</div>
 				</div>
 			</div>
