--- a/about.html
+++ b/about.html
@@ -19,7 +19,6 @@
 		<link rel="stylesheet" href="css/style.css" >
 		<link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-		<script src="js/skills_leftchart.js"></script>
 		<!-- End Google Analytics -->
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -113,7 +112,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="twelve columns">
-						
+						<div id="rightgraph">
+							<script src="js/skills_rightchart.js"></script>
+						</div>
 					</div>
 				</div>
 			</div>
