duplicated to two charts, made responsive because 'resize' function was being overridden with two separate javascript files.

--- a/about.html
+++ b/about.html
@@ -111,7 +111,11 @@
 		<section id="aboutskills">
 			<div class="container">
 				<div class="row">
-					<div class="twelve columns">
+					<div class="six columns graphs">
+						<div id="leftgraph">
+						</div>
+					</div>
+					<div class="six columns graphs">
 						<div id="rightgraph">
 							<script src="js/skills_rightchart.js"></script>
 						</div>
