styled the left graph correctly.

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 					</div>
 					<div class="six columns graphs">
 						<div id="rightgraph">
-							<script src="js/skills_rightchart.js"></script>
+							<script src="js/skills_charts.js"></script>
 						</div>
 					</div>
 				</div>
