added section dividers and finished skills section for aboutme page.

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 					<div class="twelve columns">
 						<div id="tagnameabout">
 							<h1>About Me</h1>
-							<p>My background, ambitions, and skills.</p>
+							<p>my moto, background, skills.</p>
 						</div>
 					</div>
 				</div>
@@ -101,24 +101,83 @@
 			<div class="container">
 				<div class="row">
 					<div class="twelve columns">
-						<h3>Hi and welcome.</h3>
+						<h2>Moto.</h2>
 						<p>I am a data scientist based in Austin, TX. I love learning how systems work and sharing them with others. Data science and today's massive amount of data has allowed me to peek into many unfamiliar worlds and share what I’ve learned. I get so excited when the data challenges the way I think, code, and visualize while trying to uncover its mysteries.</p>
 						<p>I am always looking for new ways to challenge myself. My latest goal was to learn HTML and CSS to build this website from scratch. I also enjoy physical challenges such as swimming, volleyball, ultimate frisbee, lifting, and hiking.</p>
 					</div>
 				</div>
 			</div>
 		</section>
+		<section id="abouteducation">
+			<div class="special container">
+				<div class="row">
+					<div class="twelve columns">
+						<h2>Education.</h2>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section id="aboutskills">
-			<div class="container">
+			<div class="special container">
+				<div class="row">
+					<div class="twelve columns">
+						<h2>Skills.</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns">
+						<div id="profile_network">
+							<img src="images/objects/profile-network.png" alt="Aaron's profile picture with network circuit lines extending outwards." title="Aaron Yan Profile Network.">
+						</div>
+					</div>
+				</div>
+				<div class="row skillnames">
+					<div class="five columns">
+						<div id="appliedmath">
+							<h3>Applied Mathematics</h3>
+						</div>
+					</div>
+					<div class="two columns">
+						<div id="plussign">
+							<h3>+</h3>
+						</div>
+					</div>
+					<div class="five columns">
+						<div id="computerprogram">
+							<h3>Computer Programming</h3>
+						</div>
+					</div>
+				</div>
 				<div class="row">
 					<div class="six columns graphs">
 						<div id="leftgraph">
 						</div>
 					</div>
+					<h3 id="computerprogram2">Computer Programming</h3>
 					<div class="six columns graphs">
 						<div id="rightgraph">
 							<script src="js/skills_charts.js"></script>
 						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="whatelse">
+			<div class="special container">
+				<div class="row">
+					<h2>More?</h2>
+				</div>
+				<div class="row">
+					<div class="six columns">
+						<a class="button button-primary first-b" href="">Contact</a>
+					</div>
+					<div class="six columns">
+						<a class="button button-primary second-b" href="">View work</a>
+					</div>
+				</div>
+				<div id="endnote" class="row">
+					<div class="twelve columns">
+						<p>Check out some of my latest work on data manipulation and machine learning! I love sharing my new ideas and experiments. All of my work can also be found on <a href="https://github.com/aaronyan">GitHub</a>.</p>
 					</div>
 				</div>
 			</div>
