--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 				</div>
 				<div class="row">
 					<div class="six columns">
-						<a class="button button-primary first-b" href="">About me</a>
+						<a class="button button-primary first-b" href=".\about.html">About me</a>
 					</div>
 					<div class="six columns">
 						<a class="button button-primary second-b" href="">View work</a>
