added philosophy content and changed header content.

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 					<div class="twelve columns">
 						<div id="tagnameabout">
 							<h1>About Me</h1>
-							<p>my moto, background, skills.</p>
+							<!-- <p>my moto, background, skills.</p> -->
 						</div>
 					</div>
 				</div>
@@ -101,9 +101,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="twelve columns">
-						<h2>Moto.</h2>
-						<p>I am a data scientist based in Austin, TX. I love learning how systems work and sharing them with others. Data science and today's massive amount of data has allowed me to peek into many unfamiliar worlds and share what I’ve learned. I get so excited when the data challenges the way I think, code, and visualize while trying to uncover its mysteries.</p>
-						<p>I am always looking for new ways to challenge myself. My latest goal was to learn HTML and CSS to build this website from scratch. I also enjoy physical challenges such as swimming, volleyball, ultimate frisbee, lifting, and hiking.</p>
+						<h2>Philosophy.</h2>
+						<p>I will never stop learning. I will remain relentlessly curious and seek to understand problems at its most fundamental principles. I will always listen so I can discover new ways to love and appreciate. I will teach unconditionally and remember the days before I knew everything. I will communicate with as much transparency as possible to facilitate collaboration. I know that sharing is one of the most powerful drivers of growth in our information age. I am motivated by impact and strive to harmonize information with technology to make the world a more efficient place.</p>
 					</div>
 				</div>
 			</div>
@@ -112,7 +111,7 @@
 			<div class="special container">
 				<div class="row">
 					<div class="twelve columns">
-						<h2>Education.</h2>
+						<h2>Background.</h2>
 					</div>
 				</div>
 			</div>
