--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					</div>
 					<div class="eight columns">
 						<div class="even-text">
-							<h3>Massage Data.</h3>
+							<h3 id="ido1">Massage Data.</h3>
 							<p>Data is powerful but often requires pre-processing before calculations can be run. I wrestle with the data to prepare it for the computational analysis. [MongoDB, MySQL, Hive] + [Python, R]</p>
 						</div>
 					</div>
@@ -133,7 +133,7 @@
 					</div>
 					<div class="six columns">
 						<div class="odd-text">
-							<h3>Crunch Numbers.</h3>
+							<h3 id="ido2">Crunch Numbers.</h3>
 							<p>I focus on the predictive modeling, machine learning, and optimization to solve the problems you need to understand at a more intimate level. [Python, Excel, R]</p>
 						</div>
 					</div>
@@ -146,7 +146,7 @@
 					</div>
 					<div class="eight columns">
 						<div class="even-text">
-							<h3>Visualize Results.</h3>
+							<h3 id="ido3">Visualize Results.</h3>
 							<p>I am passionate about making results intuitive and interactive. Nothing is sexier than a well-made chart. [Matplotlib, PPT, Excel, Plotly, Shiny]</p>
 						</div>
 					</div>
@@ -162,14 +162,14 @@
 					<img src="images/objects/whatisolve-statistic.png">
 				</div>
 				<div class="row">
-					<h3>Learning Problems</h3>
+					<h3 id="isolve1">Learning Problems</h3>
 					<p>I use statistics and machine learning to demystify trends and models from the data. [Python, R]</p>
 				</div>
 				<div class="row">
 					<img src="images/objects/whatisolve-optimization.png">
 				</div>
 				<div id="whatisolve-last" class="row">
-					<h3>Optimization Problems</h3>
+					<h3 id="isolve2">Optimization Problems</h3>
 					<p>I use my background in applied mathematics to find lowest cost or highest profit solutions. [Python, Google OR-Tools]</p>
 				</div>
 			</div>
