finalized philosophy content.

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 		<section id="banner">
 			<div class="container">
 				<div class="row">
-					<div class="cloud left-cloud transition">
+					<div class="cloud left-cloud transition notagp">
 						<img src="images/objects/cloudframe.png" alt="cloud that frames the banner">
 					</div>
 					<div class="cloud right-cloud transition">
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div class="twelve columns">
 						<h2>Philosophy.</h2>
-						<p>I will never stop learning. I will remain relentlessly curious and seek to understand problems at its most fundamental principles. I will always listen so I can discover new ways to love and appreciate. I will teach unconditionally and remember the days before I knew everything. I will communicate with as much transparency as possible to facilitate collaboration. I know that sharing is one of the most powerful drivers of growth in our information age. I am motivated by impact and strive to harmonize information with technology to make the world a more efficient place.</p>
+						<p>I will never stop learning. I will remain relentlessly curious and seek to understand problems at the most fundamental level. I will always listen so I may discover new ways to love and appreciate. I will teach unconditionally and remember the days before I knew everything. I will communicate and share as much as possible because I know sharing is one of the most powerful ideas in our age of information. I am motivated by impact, regardless of the size or scale. I strive to make meaningful, consistent impacts on our daily lives by using and collaborating with our shared information. I will never stop dreaming big, and I will never stop moving forward.</p>
 					</div>
 				</div>
 			</div>
