--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 		</section>
-		<section id="bannerimg">
+		<section id="banner-img">
 			<div class="container">
 				<div class="row">
 					<div class="twelve columns">
@@ -95,7 +95,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="twelve columns">
-						<img id="profilepic" src="images/objects/profile.png" alt="Aaron's profile picture">
+						<img id="profile-pic" src="images/objects/profile.png" alt="Aaron's profile picture">
 					</div>
 				</div>
 				<div class="row">
@@ -106,54 +106,54 @@
 				</div>
 			</div>
 		</section>
-		<section id="whatido">
+		<section id="what-i-do">
 			<div class="special container">
 				<div class="row">
 					<h2 >What I Do.</h2>
-					<p class="tagline">Transform data into actionable insight.</p>
+					<p class="tag-line">Transform data into actionable insight.</p>
 				</div>
-				<div class="row whatrow">
-					<div class="four columns">
+				<div class="row what-row">
+					<div class="four columns wid-icon">
 						<div class="even-img">
 							<img src="images/objects/massageData2.png">
 						</div>
 					</div>
 					<div class="eight columns">
 						<div class="even-text">
-							<h3 id="ido1">Massage Data.</h3>
+							<h3 id="i-do-1">Massage Data.</h3>
 							<p>Data is powerful but often requires pre-processing before calculations can be run. I wrestle with the data to prepare it for the computational analysis. [MongoDB, MySQL, Hive] + [Python, R]</p>
 						</div>
 					</div>
 				</div>
-				<div class="row whatrow">
-					<div class="six columns">
+				<div class="row what-row">
+					<div class="six columns wid-icon">
 						<div class="odd-img">
 							<img src="images/objects/crunchNumbers.png">
 						</div>
 					</div>
 					<div class="six columns">
 						<div class="odd-text">
-							<h3 id="ido2">Crunch Numbers.</h3>
+							<h3 id="i-do-2">Crunch Numbers.</h3>
 							<p>I focus on the predictive modeling, machine learning, and optimization to solve the problems you need to understand at a more intimate level. [Python, Excel, R]</p>
 						</div>
 					</div>
 				</div>
-				<div class="row whatrow">
-					<div class="four columns">
+				<div class="row what-row">
+					<div class="four columns wid-icon">
 						<div class="even-img">
 							<img src="images/objects/visualizeResults.png">
 						</div>
 					</div>
 					<div class="eight columns">
 						<div class="even-text">
-							<h3 id="ido3">Visualize Results.</h3>
+							<h3 id="i-do-3">Visualize Results.</h3>
 							<p>I am passionate about making results intuitive and interactive. Nothing is sexier than a well-made chart. [Matplotlib, PPT, Excel, Plotly, Shiny]</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section id="whatisolve">
+		<section id="what-i-solve">
 			<div class="special container">
 				<div class="row">
 					<h2>What I Solve.</h2>
@@ -162,19 +162,19 @@
 					<img src="images/objects/whatisolve-statistic.png">
 				</div>
 				<div class="row">
-					<h3 id="isolve1">Learning Problems</h3>
+					<h3 id="i-solve-1">Learning Problems</h3>
 					<p>I use statistics and machine learning to demystify trends and models from the data. [Python, R]</p>
 				</div>
 				<div class="row">
 					<img src="images/objects/whatisolve-optimization.png">
 				</div>
 				<div id="whatisolve-last" class="row">
-					<h3 id="isolve2">Optimization Problems</h3>
+					<h3 id="i-solve-2">Optimization Problems</h3>
 					<p>I use my background in applied mathematics to find lowest cost or highest profit solutions. [Python, Google OR-Tools]</p>
 				</div>
 			</div>
 		</section>
-		<section id="whatelse">
+		<section id="what-else">
 			<div class="special container">
 				<div class="row">
 					<h2>What Else?</h2>
@@ -187,7 +187,7 @@
 						<a class="button button-primary second-b" href="">View work</a>
 					</div>
 				</div>
-				<div id="endnote" class="row">
+				<div id="end-note" class="row">
 					<div class="twelve columns">
 						<p>When I'm not crunching data and solving optimization problems, you'll find me in the gym or slaying noobs in Dota 2 [<a href="http://www.dota2.com/international/overview/"><img src="images/logos/dota2icon.ico"></a>].</p>
 					</div>
@@ -208,7 +208,7 @@
 				</div>
 				<div class="row">
 					<div class="twelve columns">
-						<p class ="footertag">Designed, illustrated, and <a href="https://github.com/aaronyan/website">coded</a>.</p>
+						<p class ="footer-tag">Designed, illustrated, and <a href="https://github.com/aaronyan/website">coded</a>.</p>
 					</div>
 				</div>
 				<div class="row">
