added content for education and interests for about me page.

--- a/about.html
+++ b/about.html
@@ -81,87 +81,139 @@
 				</div>
 			</div>
 		</section>
-		<section id="bannerimgabout">
+		<section id="banner-img-about">
 			<div class="container">
 				<div class="row">
 					<div class="six columns">
-						<div id="datacenterfreeleft">
+						<div id="datacenter-free-left">
 							<img src="images/objects/dataCenter-left.png" alt="Free floating datacenter, left side." title="Cloud datacenter freefloating.">
 						</div>
 					</div>
-					<div class="six columns datacenterfreeright">
-						<div id="datacenterfreeright">
+					<div class="six columns datacenter-free-right">
+						<div id="datacenter-free-right">
 							<img src="images/objects/dataCenter-right.png" alt="Free floating datacenter, right side." title="Cloud datacenter freefloating.">
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section id="aboutintro">
+		<section id="about-intro">
 			<div class="container">
-				<div class="row">
+				<div class="row regular">
 					<div class="twelve columns">
 						<h2>Philosophy.</h2>
-						<p>I will never stop learning. I will remain relentlessly curious and seek to understand problems at the most fundamental level. I will always listen so I may discover new ways to love and appreciate. I will teach unconditionally and remember the days before I knew everything. I will communicate and share as much as possible because I know sharing is one of the most powerful ideas in our age of information. I am motivated by impact, regardless of the size or scale. I strive to make meaningful, consistent impacts on our daily lives by using and collaborating with our shared information. I will never stop dreaming big, and I will never stop moving forward.</p>
+						<p>I will never stop learning. I will remain relentlessly curious and seek to understand problems at the most fundamental level. I will always listen so I may discover new ways to love and appreciate. I will teach unconditionally and remember the days before I knew everything. I will communicate and share as much as possible because I know sharing is one of the most powerful ideas in our age of information. I am motivated by impact, regardless of the size or scale. I strive to make meaningful, consistent impacts on our daily lives by building tools that harness our shared information. I will never stop dreaming big, and I will never stop moving forward.</p>
+						<img id="phil-border-left" src="images/objects/phil-cloud-left.png" alt="cloud border for philosophy text, left side" title="cloud border left">
+						<img id="phil-border-right" src="images/objects/phil-cloud-right.png" alt="cloud border for philosophy text, right side" title="cloud border right">
 					</div>
 				</div>
 			</div>
 		</section>
-		<section id="abouteducation">
+		<section id="about-background">
 			<div class="special container">
 				<div class="row">
 					<div class="twelve columns">
 						<h2>Background.</h2>
 					</div>
 				</div>
-			</div>
-		</section>
-		<section id="aboutskills">
-			<div class="special container">
 				<div class="row">
 					<div class="twelve columns">
-						<h2>Skills.</h2>
+						<h3>Education.</h3>
 					</div>
 				</div>
-				<div class="row">
-					<div class="twelve columns">
-						<div id="profile_network">
-							<img src="images/objects/profile-network.png" alt="Aaron's profile picture with network circuit lines extending outwards." title="Aaron Yan Profile Network.">
+				<div class="row education-content regular">
+					<div class="six columns">
+						<div id="banner-ut" class="edu-banner">
+							<div class="banner-bg">
+								<img src="images/objects/banner-ut.png" alt="Banner made for University of Texas at Austin (UT)" title="University of Texas at Austin (UT) banner">
+							</div>
+							<div class="banner-content">
+								<img src="images/logos/ut-logo.png" alt="University of Texas at Austin (UT) Academic Seal" title="The academic seal of University of Texas at Austin (UT)">
+								<p>M.S. Operations Research</p>
+								<p class="italic italic-end">Univ. Texas at Austin</p>
+								<p class="italic banner-details">Full Tuition Scholarship</p>
+								<p class="italic banner-details">and Assistance</p>
+								<p class="italic banner-details">Warren and Alice Meyer</p>
+								<p class="italic banner-details">Endowed Scholarship</p>
+							</div>
+						</div>
+					</div>
+					<div class="six columns">
+						<div id="banner-usc" class="edu-banner">
+							<div class="banner-bg">
+								<img src="images/objects/banner-usc.png" alt="Banner made for University of Southern California (USC)" title="University of Southern California (USC) banner">
+							</div>
+							<div class="banner-content">
+								<img src="images/logos/usc-logo.png" alt="University of Southern California (USC) Academic Seal" title="The academic seal of University of Southern California (USC)">
+								<p>B.S. Mechanical Eng.</p>
+								<p class="italic italic-end">Univ. Southern California</p>
+								<p class="italic banner-details">2nd Place - Student</p>
+								<p class="italic banner-details">Research Award</p>
+								<p class="italic banner-details">Taiwan Tech Trek</p>
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="row skillnames">
+				<div class="row">
+					<div class="twelve columns">
+						<h3>Interests.</h3>
+					</div>
+				</div>
+				<div class="row interests-row regular">
+					<div class="three columns interest">
+						<img src="images/objects/circle2.png" alt="Aaron's interst in gaming as an icon" title="Icon to show Aaron's interest in gaming">
+						<p>Gaming</p>
+					</div>
+					<div class="three columns interest">
+						<img src="images/objects/circle2.png" alt="Aaron's interst in magic as an icon" title="Icon to show Aaron's interest in magic">
+						<p>Magic</p>
+					</div>
+					<div class="three columns interest">
+						<img src="images/objects/circle2.png" alt="Aaron's interst in swimming as an icon" title="Icon to show Aaron's interest in swimming">
+						<p>Swimming</p>
+					</div>
+					<div class="three columns interest">
+						<img src="images/objects/circle2.png" alt="Aaron's interst in hiking as an icon" title="Icon to show Aaron's interest in hiking">
+						<p>Hiking</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns">
+						<h3>Skills.</h3>
+					</div>
+				</div>
+				<div class="row skill-names">
 					<div class="five columns">
-						<div id="appliedmath">
+						<div id="applied-math">
 							<h3>Applied Mathematics</h3>
 						</div>
 					</div>
 					<div class="two columns">
-						<div id="plussign">
+						<div id="plus-sign">
 							<h3>+</h3>
 						</div>
 					</div>
 					<div class="five columns">
-						<div id="computerprogram">
+						<div id="computer-program">
 							<h3>Computer Programming</h3>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="six columns graphs">
-						<div id="leftgraph">
+						<div id="left-graph">
 						</div>
 					</div>
-					<h3 id="computerprogram2">Computer Programming</h3>
+					<h3 id="computer-program2">Computer Programming</h3>
 					<div class="six columns graphs">
-						<div id="rightgraph">
+						<div id="right-graph">
 							<script src="js/skills_charts.js"></script>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section id="whatelse">
+		<section id="what-else">
 			<div class="special container">
 				<div class="row">
 					<h2>More?</h2>
@@ -174,7 +226,7 @@
 						<a class="button button-primary second-b" href="">View work</a>
 					</div>
 				</div>
-				<div id="endnote" class="row">
+				<div id="end-note" class="row regular">
 					<div class="twelve columns">
 						<p>Check out some of my latest work on data manipulation and machine learning! I love sharing my new ideas and experiments. All of my work can also be found on <a href="https://github.com/aaronyan">GitHub</a>.</p>
 					</div>
@@ -195,7 +247,7 @@
 				</div>
 				<div class="row">
 					<div class="twelve columns">
-						<p class ="footertag">Designed, illustrated, and <a href="https://github.com/aaronyan/website">coded</a>.</p>
+						<p class ="footer-tag">Designed, illustrated, and <a href="https://github.com/aaronyan/website">coded</a>.</p>
 					</div>
 				</div>
 				<div class="row">
